--- a/debian/control
+++ b/debian/control
@@ -5,8 +5,7 @@ Build-Depends: debhelper (>= 9)
 Standards-Version: 3.9.5
 Section: libs
 Homepage: https://launchpad.net/activityfinder
-#Vcs-Git: git://anonscm.debian.org/collab-maint/preload-logger.git
-#Vcs-Browser: http://anonscm.debian.org/?p=collab-maint/preload-logger.git;a=summary
+Vcs-Bzr: http://code.launchpad.net/~ucl-cs-study-devs/activityfinder/PreloadLogger
 Vcs-Browser: https://code.launchpad.net/~ucl-cs-study-devs/activityfinder/PreloadLogger
 
 Package: preload-logger1
