* Fixing control file to indicate presence of a dev package * Renaming source package to libpreload-logger
original bzr status:
revno: 30
committer: Steve Dodier-Lazaro <sidnioulz@gmail.com>
branch nick: preload-logger
timestamp: Sat 2015-09-05 17:20:17 +0100

--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: preload-logger
+Source: libpreload-logger
 Priority: optional
 Maintainer: Steve Dodier-Lazaro <sidnioulz@gmail.com>
 Build-Depends: debhelper (>= 9)
@@ -8,10 +8,17 @@ Homepage: https://launchpad.net/activityfinder
 Vcs-Bzr: http://code.launchpad.net/~ucl-cs-study-devs/activityfinder/PreloadLogger
 Vcs-Browser: https://code.launchpad.net/~ucl-cs-study-devs/activityfinder/PreloadLogger
 
-Package: preload-logger1
+Package: libpreload-logger1
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, libpam-modules
 Description: Library to log filesystem and IPC system calls in userland processes
  Library to log filesystem and IPC system calls in userland processes. Uses
  PAM env to inject the library into all processes, and creates files into the
  user's Zeitgeist directory.
+
+Package: libpreload-logger-dev
+Architecture: any
+Section: libdevel
+Depends: libpreload-logger1 (= ${binary:Version}), ${misc:Depends}
+Description: Development files for libpreload-logger1
+ This package contains the headers for libpreload-logger1.
