Trying to remove some sanity checks from the LP builder...
original bzr status:
revno: 42
committer: Steve Dodier-Lazaro <sidnioulz@gmail.com>
branch nick: preload-logger
timestamp: Wed 2015-10-07 22:59:02 +0100

--- a/debian/rules
+++ b/debian/rules
@@ -29,7 +29,7 @@ include /usr/share/dpkg/default.mk
 #	-DCMAKE_LIBRARY_PATH=$(DEB_HOST_MULTIARCH)
 
 
-override dh_builddeb:
+override_dh_builddeb:
 	NO_PKG_MANGLE=1 dh_builddeb
 
 override_dh_usrlocal:
