Removing glibc dep as the glibc package is actually libc6...
original bzr status:
revno: 45
committer: Steve Dodier-Lazaro <sidnioulz@gmail.com>
branch nick: preload-logger
timestamp: Fri 2015-10-09 14:35:24 +0100

--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Vcs-Browser: https://code.launchpad.net/~ucl-cs-study-devs/activityfinder/Preloa
 
 Package: libpreload-logger1
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libpam-modules, glibc
+Depends: ${shlibs:Depends}, ${misc:Depends}, libpam-modules, libc6
 Description: Library to log filesystem and IPC system calls in userland processes
  Library to log filesystem and IPC system calls in userland processes. Uses
  PAM env to inject the library into all processes, and creates files into the
